# final-project-calvarado2004

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md  raspberrypi5_defconfig
BME280-Environmental-Sensor-Demo-Code/: main.c
base_external/: Config.in  external.desc  external.mk
base_external/bme_driver/: Config.in  bme_driver.mk
base_external/bme_sensor/: Config.in  Makefile  bme_sensor  bme_sensor.mk  sensor_read.c
base_external/rootfs_overlay/boot/: config.txt
base_external/rootfs_overlay/boot/overlays/: bme280-overlay.dtbo  bme280-overlay.dts  compile-overlay.txt
base_external/rootfs_overlay/etc/: modules  wpa_supplicant.conf
base_external/rootfs_overlay/etc/device_overlays/: bme280-overlay.dts  compile-overlay.txt
base_external/rootfs_overlay/etc/init.d/: S98wifi_startup  S99ic2_bme280_startup  S99wifi_startup
base_external/rootfs_overlay/etc/rc.d/: S99wifi_startup
bcm2835-1.45/: Makefile  config.status
bcm2835-1.45/doc/: Makefile
bcm2835-1.45/src/: Makefile
bcm2835-1.45/src/.deps/: bcm2835.Po
